--- a/game-2048.html
+++ b/game-2048.html
@@ -32,8 +32,8 @@
     <main class="container mx-auto px-4 py-8">
         <div class="aspect-w-16 aspect-h-9 max-w-4xl mx-auto mb-8">
             <iframe 
-                src="https://play2048.co/"
-                class="w-full h-[600px] border-0 rounded-lg shadow-lg"
+                src="2048/index.html"
+                class="w-full h-[900px] border-0 rounded-lg shadow-lg"
                 allowfullscreen
                 loading="lazy"
                 title="2048 Game"
