--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
             <!-- 2048 -->
             <div class="bg-gray-50 rounded-xl shadow-lg flex flex-col items-center p-6">
-                <img src="https://play2048.co/meta/apple-touch-icon.png" alt="2048 Logo" class="w-24 h-24 mb-4 rounded-lg">
+                <img src="img/2048.png" alt="2048 Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
                 <h2 class="text-xl font-bold mb-2">2048</h2>
                 <p class="text-gray-600 mb-4 text-center">Join the numbers and get to the 2048 tile! A simple yet addictive puzzle game.</p>
                 <a href="game-2048.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
             </div>
             <!-- Snake -->
             <div class="bg-gray-50 rounded-xl shadow-lg flex flex-col items-center p-6">
-                <img src="https://playsnake.org/favicon.ico" alt="Snake Logo" class="w-24 h-24 mb-4 rounded-lg bg-white">
+                <img src="img/snake.jpg" alt="Snake Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
                 <h2 class="text-xl font-bold mb-2">Snake</h2>
                 <p class="text-gray-600 mb-4 text-center">Eat the dots, grow your snake, and avoid hitting the walls or yourself!</p>
                 <a href="game-snake.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
             </div>
             <!-- Tetris -->
             <div class="bg-gray-50 rounded-xl shadow-lg flex flex-col items-center p-6">
-                <img src="https://freetetris.org/favicon.ico" alt="Tetris Logo" class="w-24 h-24 mb-4 rounded-lg bg-white">
+                <img src="img/tetris.jpg" alt="Tetris Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
                 <h2 class="text-xl font-bold mb-2">Tetris</h2>
                 <p class="text-gray-600 mb-4 text-center">Arrange the falling blocks to clear lines and score points in this timeless classic.</p>
                 <a href="game-tetris.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
             </div>
             <!-- Minesweeper -->
             <div class="bg-gray-50 rounded-xl shadow-lg flex flex-col items-center p-6">
-                <img src="https://minesweeperonline.com/favicon.ico" alt="Minesweeper Logo" class="w-24 h-24 mb-4 rounded-lg bg-white">
+                <img src="img/minesweeper.jpg" alt="Minesweeper Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
                 <h2 class="text-xl font-bold mb-2">Minesweeper</h2>
                 <p class="text-gray-600 mb-4 text-center">Uncover all the safe squares without detonating any mines. Test your logic and luck!</p>
                 <a href="game-minesweeper.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
             </div>
             <!-- Flappy Bird -->
             <div class="bg-gray-50 rounded-xl shadow-lg flex flex-col items-center p-6">
-                <img src="https://flappybird.io/favicon.ico" alt="Flappy Bird Logo" class="w-24 h-24 mb-4 rounded-lg bg-white">
+                <img src="https://upload.wikimedia.org/wikipedia/en/0/0a/Flappy_Bird_icon.png" alt="Flappy Bird Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
                 <h2 class="text-xl font-bold mb-2">Flappy Bird</h2>
                 <p class="text-gray-600 mb-4 text-center">Tap or click to keep the bird flying and avoid the pipes. How far can you go?</p>
                 <a href="game-flappybird.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
