--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <p class="text-gray-600 mb-4 text-center">Join the numbers and get to the 2048 tile! A simple yet addictive puzzle game.</p>
                 <a href="game-2048.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
             </div>
-            <!-- Snake -->
+            <!-- Pacman -->
             <div class="bg-gray-50 rounded-xl shadow-lg flex flex-col items-center p-6">
-                <img src="img/snake.jpg" alt="Snake Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
-                <h2 class="text-xl font-bold mb-2">Snake</h2>
-                <p class="text-gray-600 mb-4 text-center">Eat the dots, grow your snake, and avoid hitting the walls or yourself!</p>
+                <img src="img/Pacman.jpg" alt="Pacman Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
+                <h2 class="text-xl font-bold mb-2">Pacman</h2>
+                <p class="text-gray-600 mb-4 text-center">Enjoy the classic Pacman arcade game! Eat all the dots, avoid the ghosts, and chase the high score.</p>
                 <a href="game-snake.html" class="bg-apple-blue text-white px-6 py-2 rounded-full font-semibold shadow hover:bg-blue-600 transition">Play</a>
             </div>
             <!-- Tetris -->
