--- a/game-flappybird.html
+++ b/game-flappybird.html
@@ -31,14 +31,8 @@
     </header>
 
     <main class="container mx-auto px-4 py-8">
-        <div class="aspect-w-16 aspect-h-9 max-w-4xl mx-auto mb-8">
-            <iframe 
-                src="flappybird/index.html"
-                class="w-full h-[900px] border-0 rounded-lg shadow-lg"
-                allowfullscreen
-                loading="lazy"
-                title="Flappy Bird Game"
-            ></iframe>
+        <div class="flex justify-center mb-8">
+            <iframe src="flappybird/index.html" width="900" height="600" style="max-width:100%;border:0;display:block;" allowfullscreen title="Flappy Bird Game"></iframe>
         </div>
         <section class="max-w-4xl mx-auto">
             <h2 class="text-2xl font-bold mb-4">How to Play</h2>
