--- a/game-minesweeper.html
+++ b/game-minesweeper.html
@@ -31,9 +31,7 @@
     </header>
 
     <main class="container mx-auto px-4 py-8">
-        <div class="flex justify-center mb-8">
-            <iframe src="https://html-classic.itch.zone/html/2820951/index.html" width="600" height="800" frameborder="0" allowfullscreen title="Minesweeper Game"></iframe>
-        </div>
+        <iframe src="https://html-classic.itch.zone/html/2820951/index.html" width="900" height="600" style="display:block;margin-left:auto;margin-right:auto;max-width:100%;border:0;overflow:hidden;" allowfullscreen title="Minesweeper Game"></iframe>
         <section class="max-w-4xl mx-auto">
             <h2 class="text-2xl font-bold mb-4">How to Play</h2>
             <ul class="list-disc pl-6 mb-6">
