--- a/game-snake.html
+++ b/game-snake.html
@@ -32,7 +32,7 @@
 
     <main class="container mx-auto px-4 py-8">
         <div class="flex justify-center mb-8">
-            <iframe src="https://html-classic.itch.zone/html/3946506/index.html" width="552" height="600" frameborder="0" allowfullscreen title="Pacman Game"></iframe>
+            <iframe src="https://html-classic.itch.zone/html/3946506/index.html" width="900" height="600" style="max-width:100%;border:0;display:block;" allowfullscreen title="Pacman Game"></iframe>
         </div>
         <section class="max-w-4xl mx-auto">
             <h2 class="text-2xl font-bold mb-4">How to Play</h2>
