Add Google Analytics to all game pages and update README

--- a/game-flappybird.html
+++ b/game-flappybird.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird - Play Online | GameShiftly</title>
+    <title>Flappy Bird Game - GameShiftly</title>
     <meta name="description" content="Play Flappy Bird online for free! Tap or click to keep the bird flying and avoid the pipes. How far can you go?">
-    <link rel="canonical" href="https://gameshiftly.online/game-flappybird">
+    <link rel="canonical" href="https://gameshiftly.online/game-flappybird.html">
+    <link href="./output.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPVFP3K52R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZPVFP3K52R');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
