--- a/game-2048.html
+++ b/game-2048.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2048 - Play Online | GameShiftly</title>
+    <title>2048 Game - GameShiftly</title>
     <meta name="description" content="Play 2048 online for free! Join the numbers and get to the 2048 tile in this addictive puzzle game.">
-    <link rel="canonical" href="https://gameshiftly.online/game-2048">
+    <link rel="canonical" href="https://gameshiftly.online/game-2048.html">
+    <link href="./output.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPVFP3K52R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZPVFP3K52R');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
