--- a/game-minesweeper.html
+++ b/game-minesweeper.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minesweeper - Play Online | GameShiftly</title>
+    <title>Minesweeper Game - GameShiftly</title>
     <meta name="description" content="Play Minesweeper online for free! Uncover all the safe squares without detonating any mines. Test your logic and luck!">
-    <link rel="canonical" href="https://gameshiftly.online/game-minesweeper">
+    <link rel="canonical" href="https://gameshiftly.online/game-minesweeper.html">
+    <link href="./output.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPVFP3K52R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZPVFP3K52R');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
