更新游戏页面，将所有中文内容替换为英文，确保游戏信息、操作说明和页面结构注释均为英文，同时实现页脚年份的实时更新，提升用户体验和一致性。

--- a/gameshiftly.html
+++ b/gameshiftly.html
@@ -426,7 +426,7 @@
                         <div class="flex-1 overflow-hidden">
                             <div id="driving-games" class="flex space-x-3 lg:space-x-4 scroll-container" style="scroll-behavior: smooth;">
                                 <!-- 游戏卡片 -->
-                                <div class="game-card bg-white rounded-lg shadow-md overflow-hidden flex-shrink-0">
+                                <div class="game-card bg-white rounded-lg shadow-md overflow-hidden flex-shrink-0 cursor-pointer" onclick="window.open('game-traffic-jam-3d.html', '_blank')">
                                     <img src="https://via.placeholder.com/160x120/4F46E5/FFFFFF?text=Traffic+Jam+3D" alt="Traffic Jam 3D">
                                     <div class="game-card-info">
                                         <h3>Traffic Jam 3D</h3>
@@ -440,7 +440,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="game-card bg-white rounded-lg shadow-md overflow-hidden flex-shrink-0">
+                                <div class="game-card bg-white rounded-lg shadow-md overflow-hidden flex-shrink-0 cursor-pointer" onclick="window.open('game-turbo-moto-racer.html', '_blank')">
                                     <img src="https://via.placeholder.com/160x120/7C3AED/FFFFFF?text=Turbo+Moto+Racer" alt="Turbo Moto Racer">
                                     <div class="game-card-info">
                                         <h3>Turbo Moto Racer</h3>
