--- a/game-tetris.html
+++ b/game-tetris.html
@@ -3,62 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tetris Game - GameShiftly</title>
+    <title>Tetris - GameShiftly</title>
     <meta name="description" content="Play Tetris online for free! Arrange the falling blocks to clear lines and score points in this timeless classic.">
     <link rel="canonical" href="https://gameshiftly.online/game-tetris.html">
-    
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPVFP3K52R"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-ZPVFP3K52R');
-    </script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'apple-blue': '#007AFF',
-                        'apple-gray': '#1d1d1f',
-                    }
-                }
-            }
-        }
-    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="footer.js"></script>
+    <style>
+        .game-canvas-container { position: relative; width: 100%; max-width: 900px; margin: 0 auto; background: #f8f9fa; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .game-canvas { width: 100%; height: 500px; background: #222; display: flex; align-items: center; justify-content: center; position: relative; }
+        #iframe-wrapper { width: 900px; height: 600px; transform-origin: top left; }
+        .game-canvas iframe { width: 900px; height: 600px; border: none; display: block; background: transparent; }
+        @media (max-width: 1024px) { .game-canvas { height: 350px; } }
+        @media (max-width: 900px) { #iframe-wrapper, .game-canvas iframe { width: 100vw; height: 66vw; min-width: 0; min-height: 0; } }
+        @media (max-width: 768px) { .game-canvas { height: 220px; } }
+    </style>
 </head>
-<body class="bg-white text-apple-gray">
-    <header class="container mx-auto px-4 py-8 flex flex-col items-center">
-        <a href="index.html" class="self-start mb-4 bg-gray-200 hover:bg-gray-300 text-apple-gray px-4 py-2 rounded-full font-semibold transition">&larr; Back to Home</a>
-        <img src="img/tetris.jpg" alt="Tetris Logo" class="w-32 h-32 mb-4 rounded-lg object-cover bg-white">
-        <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">Tetris</h1>
-        <p class="text-xl text-center text-gray-600 max-w-2xl mx-auto mb-2">
-            Arrange the falling blocks to clear lines and score points in this timeless classic.
-        </p>
+<body class="bg-gray-50">
+    <header class="bg-white shadow-sm">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center h-16">
+                <div class="flex items-center">
+                    <a href="gameshiftly.html" class="flex items-center space-x-2">
+                        <div class="w-8 h-8 bg-red-600 rounded flex items-center justify-center"><span class="text-white font-bold text-sm">GS</span></div>
+                        <div><div class="text-red-600 font-bold text-lg">GameShiftly</div><div class="text-gray-500 text-xs">Free Online Games</div></div>
+                    </a>
+                </div>
+                <div class="hidden md:flex flex-1 max-w-md mx-8">
+                    <div class="relative w-full">
+                        <input type="text" placeholder="Search our 90,000 Games" class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
+                        <i class="fas fa-search absolute left-3 top-3 text-gray-400"></i>
+                    </div>
+                </div>
+                <div class="flex items-center space-x-4">
+                    <button class="text-gray-600 hover:text-gray-900">Log in</button>
+                    <button class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700">Register</button>
+                </div>
+            </div>
+        </div>
     </header>
-
-    <main class="container mx-auto px-4 py-8">
-        <div class="flex justify-center mb-8">
-            <iframe src="tetris/index.html" width="900" height="600" style="max-width:100%;border:0;display:block;" allowfullscreen title="Tetris Game"></iframe>
+    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <div class="flex flex-col lg:flex-row lg:items-center lg:justify-between mb-6">
+            <div>
+                <h1 class="text-3xl font-bold text-gray-900 mb-2">Tetris</h1>
+                <div class="flex items-center space-x-4 text-sm text-gray-600">
+                    <div class="flex items-center"><i class="fas fa-star text-yellow-400 mr-1"></i><span>8.8</span></div>
+                    <div class="flex items-center"><i class="fas fa-gamepad mr-1"></i><span>Arcade & Classic</span></div>
+                    <div class="flex items-center"><i class="fas fa-play mr-1"></i><span>2.3M plays</span></div>
+                </div>
+            </div>
+            <div class="flex items-center space-x-2 mt-4 lg:mt-0">
+                <button class="control-btn secondary" onclick="shareGame()"><i class="fas fa-share"></i>Share</button>
+                <button class="control-btn secondary" onclick="toggleFavorite()"><i class="fas fa-heart" id="favoriteIcon"></i><span id="favoriteText">Favorite</span></button>
+                <button class="control-btn secondary" onclick="toggleFullscreen()"><i class="fas fa-expand" id="fullscreenIcon"></i><span id="fullscreenText">Fullscreen</span></button>
+            </div>
         </div>
-        <section class="max-w-4xl mx-auto">
-            <h2 class="text-2xl font-bold mb-4">How to Play</h2>
-            <ul class="list-disc pl-6 mb-6">
-                <li>Press Spacebar to start the game.</li>
-                <li>Use arrow keys to move and rotate the blocks.</li>
-                <li>Fill a horizontal line to clear it and score points.</li>
-                <li>The game ends when the blocks reach the top.</li>
-            </ul>
-        </section>
+        <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
+            <div class="lg:col-span-3">
+                <div class="game-canvas-container" id="game-canvas-container">
+                    <div class="game-canvas">
+                        <div id="iframe-wrapper">
+                            <iframe src="tetris/index.html" title="Tetris Game" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="game-controls">
+                        <button class="control-btn secondary" id="restartBtn" onclick="restartGame()"><i class="fas fa-redo"></i>Restart</button>
+                        <button class="control-btn secondary" onclick="toggleFullscreen()"><i class="fas fa-expand"></i>Fullscreen</button>
+                    </div>
+                </div>
+            </div>
+            <div class="lg:col-span-1">
+                <div class="game-info-card">
+                    <h3 class="text-lg font-semibold mb-3">Game Information</h3>
+                    <p class="text-gray-600 mb-4">Arrange the falling blocks to clear lines and score points in this timeless classic.</p>
+                    <div class="mb-4">
+                        <h4 class="font-medium mb-2">Game Tags</h4>
+                        <div><span class="game-tag">Arcade & Classic</span><span class="game-tag">Puzzle</span><span class="game-tag">Blocks</span><span class="game-tag">Retro</span></div>
+                    </div>
+                    <div class="mb-4">
+                        <h4 class="font-medium mb-2">Controls</h4>
+                        <ul class="text-sm text-gray-600 space-y-1">
+                            <li>• Arrow keys to move/rotate</li>
+                            <li>• Spacebar to drop</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="game-info-card">
+                    <h3 class="text-lg font-semibold mb-3">Related Games</h3>
+                    <div class="space-y-2">
+                        <div class="related-game" onclick="goToGame('game-flappybird.html')"><img src="https://upload.wikimedia.org/wikipedia/en/0/0a/Flappy_Bird_icon.png" alt="Flappy Bird"><div><div class="font-medium">Flappy Bird</div><div class="text-sm text-gray-500">Arcade & Classic</div></div></div>
+                        <div class="related-game" onclick="goToGame('game-minesweeper.html')"><img src="img/minesweeper.jpg" alt="Minesweeper"><div><div class="font-medium">Minesweeper</div><div class="text-sm text-gray-500">Thinking</div></div></div>
+                        <div class="related-game" onclick="goToGame('game-pacman.html')"><img src="img/Pacman.jpg" alt="Pacman"><div><div class="font-medium">Pacman</div><div class="text-sm text-gray-500">Arcade & Classic</div></div></div>
+                        <div class="related-game" onclick="goToGame('game-snake.html')"><img src="img/2048.png" alt="Snake"><div><div class="font-medium">Snake</div><div class="text-sm text-gray-500">Arcade & Classic</div></div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-
-    <footer class="bg-gray-100 py-8 mt-16">
-        <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 GameShiftly. All rights reserved.</p>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
+    <script>
+        function scaleIframe() {
+            const container = document.getElementById('game-canvas-container');
+            const wrapper = document.getElementById('iframe-wrapper');
+            const baseWidth = 900, baseHeight = 600;
+            const maxW = container.offsetWidth;
+            const maxH = window.innerHeight * 0.7;
+            const scale = Math.min(maxW / baseWidth, maxH / baseHeight, 1);
+            wrapper.style.transform = `scale(${scale})`;
+            wrapper.style.width = baseWidth + 'px';
+            wrapper.style.height = baseHeight + 'px';
+            container.style.height = (baseHeight * scale) + 'px';
+        }
+        window.addEventListener('resize', scaleIframe);
+        document.addEventListener('DOMContentLoaded', scaleIframe);
+        function goToGame(game) { window.location.href = game; }
+        function toggleFullscreen() {
+            const container = document.querySelector('.game-canvas-container');
+            if (document.fullscreenElement) { document.exitFullscreen(); } else { container.requestFullscreen(); }
+        }
+        function shareGame() { if (navigator.share) { navigator.share({ title: 'Tetris - GameShiftly', text: 'Check out this awesome game!', url: window.location.href }); } else { navigator.clipboard.writeText(window.location.href); alert('Game link copied to clipboard!'); } }
+        function toggleFavorite() { const icon = document.getElementById('favoriteIcon'); const text = document.getElementById('favoriteText'); if (icon.classList.contains('text-red-500')) { icon.classList.remove('text-red-500'); text.textContent = 'Favorite'; } else { icon.classList.add('text-red-500'); text.textContent = 'Favorited'; } }
+        function restartGame() { document.querySelector('.game-canvas iframe').contentWindow.location.reload(); }
+    </script>
 </body>
 </html> 
